First batch of improvements